v1.12.x/connectors/pipeline/openlineage.mdx
---
title: OpenLineage | OpenMetadata Data Lineage Pipeline
description: Connect your data pipelines with OpenMetadata's OpenLineage connector. Track data lineage, monitor pipeline metadata, and gain end-to-end visibility.
sidebarTitle: Overview
---
import ConfigureIngestion from '/snippets/connectors/pipeline/configure-ingestion.mdx'
import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import TestConnection from '/snippets/connectors/test-connection.mdx'
import IngestionScheduleAndDeploy from '/snippets/connectors/ingestion-schedule-and-deploy.mdx'
import { MetadataIngestionUi } from '/snippets/components/MetadataIngestionUi.jsx'

<ConnectorDetailsHeader
icon='/public/images/connectors/openlineage.png'
name="OpenLineage"
stage="BETA"
availableFeatures={["Pipelines", "Lineage", "Usage"]}
unavailableFeatures={["Pipeline Status", "Owners", "Tags"]} />

In this section, we provide guides and references to use the OpenLineage connector.
Configure and schedule OpenLineage metadata workflows from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
- [Troubleshooting](/v1.12.x/connectors/pipeline/openlineage/troubleshooting)

## Requirements

OpenMetadata is integrated with OpenLineage up to version 1.7.0 and will continue to work for future OpenLineage versions.
OpenLineage is an open framework for data lineage collection and analysis. At its core is an extensible specification that systems can use to interoperate with lineage metadata.
Apart from being a specification, it is also a set of integrations collecting lineage from various systems such as Apache Airflow and Spark.

### OpenLineage Connector Events
OpenLineage connector consumes OpenLineage events from either a **Kafka broker** or **AWS Kinesis Data Streams** and translates them to OpenMetadata Lineage information.

### Kafka Configuration

#### Airflow OpenLineage Events (Kafka)
To configure your Airflow instance:
1. Install the appropriate provider in [Airflow](https://airflow.apache.org/docs/apache-airflow-providers-openlineage/stable/index.html)
2. Configure OpenLineage Provider in [Airflow](https://airflow.apache.org/docs/apache-airflow-providers-openlineage/stable/guides/user.html#using-openlineage-integration)
    - Use `kafka` transport mode as OpenLineage events are collected from the Kafka topic. Detailed configuration options can be found [here](https://openlineage.io/docs/client/python/#configuration)

#### Spark OpenLineage Events (Kafka)
Configure Spark Session to produce OpenLineage events compatible with the OpenMetadata connector:
```python
from pyspark.sql import SparkSession
from uuid import uuid4

spark = SparkSession.builder\
    .config('spark.openlineage.namespace', 'mynamespace')\
    .config('spark.openlineage.parentJobName', 'hello-world')\
    .config('spark.openlineage.parentRunId', str(uuid4()))\
    .config('spark.jars.packages', 'io.openlineage:openlineage-spark:1.7.0')\
    .config('spark.extraListeners', 'io.openlineage.spark.agent.OpenLineageSparkListener')\
    .config('spark.openlineage.transport.type', 'kafka')\
    .getOrCreate()
```

### AWS Kinesis Configuration

The OpenLineage connector also supports consuming events from AWS Kinesis Data Streams. This is useful when your data pipelines publish OpenLineage events to Kinesis instead of Kafka.

#### Kinesis Requirements
- An AWS Kinesis Data Stream receiving OpenLineage events
- AWS credentials with permissions to read from the Kinesis stream:
  - `kinesis:GetRecords`
  - `kinesis:GetShardIterator`
  - `kinesis:DescribeStream`
  - `kinesis:ListShards`

#### Spark OpenLineage Events (Kinesis)
Configure Spark Session to produce OpenLineage events to Kinesis:
```python
from pyspark.sql import SparkSession
from uuid import uuid4

spark = SparkSession.builder\
    .config('spark.openlineage.namespace', 'mynamespace')\
    .config('spark.openlineage.parentJobName', 'hello-world')\
    .config('spark.openlineage.parentRunId', str(uuid4()))\
    .config('spark.jars.packages', 'io.openlineage:openlineage-spark:1.7.0')\
    .config('spark.extraListeners', 'io.openlineage.spark.agent.OpenLineageSparkListener')\
    .config('spark.openlineage.transport.type', 'kinesis')\
    .config('spark.openlineage.transport.streamName', 'openlineage-events')\
    .config('spark.openlineage.transport.region', 'us-east-2')\
    .getOrCreate()
```

## How Table Resolution Works

This section is specifically about dataset resolution. The connector can create pipeline services and pipeline entities from incoming OpenLineage job metadata, but table resolution is read-only: tables, schemas, and databases must already exist in OpenMetadata. **Ingest your database sources before running the OpenLineage pipeline** or lineage edges will not attach.

<Info>
If a dataset in an OpenLineage event cannot be resolved to an existing OpenMetadata entity, it is skipped with a warning in the ingestion logs. The rest of the event is still processed.
</Info>

### Resolution Order

Each dataset in an OpenLineage event is resolved as follows:

1. **First symlink identifier** — if the event includes a `symlinks` facet with at least one identifier, the connector uses the **name from the first symlink** to look up the table. All symlink types (including `LOCATION`) are considered; there is no type-based filtering in this version.
2. **Top-level namespace and name** — used when no symlinks are present in the event.

<Info>
If the first symlink identifier cannot be matched to an existing OpenMetadata entity, no further candidates are tried and the dataset is skipped. Ensure the symlink name in the event matches an ingested table.
</Info>

### Hive / Glue Tables on Object Storage

When Spark writes to a table in a Glue or Hive catalog backed by S3, the OpenLineage event carries both an S3 path as the top-level namespace and a `symlinks` facet with catalog table identifiers. The connector uses the name from the **first symlink identifier** in the event to resolve the table.

<Tip>
Ensure your Glue or Hive catalog tables are ingested into OpenMetadata before running the OpenLineage pipeline. The first symlink name in the event must match the ingested table name exactly.
</Tip>

## Metadata Ingestion
<MetadataIngestionUi connector={"OpenLineage"} selectServicePath={"/public/images/connectors/openlineage/select-service.png"} addNewServicePath={"/public/images/connectors/openlineage/add-new-service.png"} serviceConnectionPath={"/public/images/connectors/openlineage/service-connection.png"} />
## Connection Details
<Steps>
<TestConnection />
<ConfigureIngestion />
<IngestionScheduleAndDeploy />
</Steps>
### Providing Connection Details Programmatically via API

#### 1. Preparing the Client
```python
from metadata.generated.schema.entity.services.connections.metadata.openMetadataConnection import (
    OpenMetadataConnection,
)
from metadata.generated.schema.security.client.openMetadataJWTClientConfig import (
    OpenMetadataJWTClientConfig,
)
from metadata.ingestion.ometa.ometa_api import OpenMetadata

server_config = OpenMetadataConnection(
    hostPort="http://localhost:8585/api",
    authProvider="openmetadata",
    securityConfig=OpenMetadataJWTClientConfig(
        jwtToken="<token>"
    ),
)
metadata = OpenMetadata(server_config)
assert metadata.health_check()  # Will fail if we cannot reach the server
```

#### 2. Creating the OpenLineage Pipeline Service (Kafka)
```python
from metadata.generated.schema.api.services.createPipelineService import CreatePipelineServiceRequest
from metadata.generated.schema.entity.services.pipelineService import (
    PipelineServiceType,
    PipelineConnection,
)
from metadata.generated.schema.entity.services.connections.pipeline.openLineageConnection import (
    OpenLineageConnection,
    KafkaBrokerConfig,
    SecurityProtocol as KafkaSecurityProtocol,
    ConsumerOffsets
)
from metadata.generated.schema.security.ssl.validateSSLClientConfig import (
    ValidateSslClientConfig,
)

openlineage_service_request = CreatePipelineServiceRequest(
    name='openlineage-kafka-service',
    displayName='OpenLineage Kafka Service',
    serviceType=PipelineServiceType.OpenLineage,
    connection=PipelineConnection(
        config=OpenLineageConnection(
            brokerConfig=KafkaBrokerConfig(
                brokersUrl='broker1:9092,broker2:9092',
                topicName='openlineage-events',
                consumerGroupName='openmetadata-consumer',
                consumerOffsets=ConsumerOffsets.earliest,
                poolTimeout=3.0,
                sessionTimeout=60,
                securityProtocol=KafkaSecurityProtocol.SSL,
                # SSL config is optional and only used when securityProtocol=SSL
                sslConfig=ValidateSslClientConfig(
                    sslCertificate='/path/to/kafka/certs/Certificate.pem',
                    sslKey='/path/to/kafka/certs/Key.pem',
                    caCertificate='/path/to/kafka/certs/RootCA.pem'
                )
            )
        )
    ),
)
metadata.create_or_update(openlineage_service_request)
```

#### 3. Creating the OpenLineage Pipeline Service (Kinesis)
```python
from metadata.generated.schema.api.services.createPipelineService import CreatePipelineServiceRequest
from metadata.generated.schema.entity.services.pipelineService import (
    PipelineServiceType,
    PipelineConnection,
)
from metadata.generated.schema.entity.services.connections.pipeline.openLineageConnection import (
    OpenLineageConnection,
    KinesisBrokerConfig,
    KinesisConsumerOffsets
)
from metadata.generated.schema.security.credentials.awsCredentials import AWSCredentials

openlineage_service_request = CreatePipelineServiceRequest(
    name='openlineage-kinesis-service',
    displayName='OpenLineage Kinesis Service',
    serviceType=PipelineServiceType.OpenLineage,
    connection=PipelineConnection(
        config=OpenLineageConnection(
            brokerConfig=KinesisBrokerConfig(
                streamName='openlineage-events',
                consumerOffsets=KinesisConsumerOffsets.TRIM_HORIZON,  # or LATEST
                poolTimeout=1.0,
                sessionTimeout=30,
                awsConfig=AWSCredentials(
                    awsRegion='us-east-2',
                    awsAccessKeyId='<your-access-key>',  # Optional if using IAM roles
                    awsSecretAccessKey='<your-secret-key>',  # Optional if using IAM roles
                    # awsSessionToken='<session-token>',  # Optional, for temporary credentials
                )
            )
        )
    ),
)
metadata.create_or_update(openlineage_service_request)
```
